# practica-2

./: .gitignore  README.md  ayudas_nodos.txt
group2a_robot/: CMakeLists.txt  package.xml
group2a_robot/launch/: start_real_tracking.launch~  start_simulation_leader_navigation.launch  start_simulation_tracking.launch  start_simulation_tracking.launch~
localization/: CMakeLists.txt  ayudas.txt  package.xml  readme.txt
localization/launch/: localization.launch  localization.launch~  mapping.launch
localization/maps/: map_tracking.yaml
navigation/: CMakeLists.txt  package.xml
navigation/launch/: move_base.launch.xml  navigation.launch
navigation/launch/include/: move_base.launch.xml  velocity_smoother.launch.xml
navigation/launch/param/: dwa_local_planner_params.yaml  dwa_local_planner_params.yaml~  smoother.yaml  smoother.yaml~
navigation/src/: navigation.cpp
navigation_demo/devel/: _setup_util.py  setup.sh
navigation_demo/devel/lib/TurtleStorage/: simple_navigation_goals
navigation_demo/devel/lib/navigation_demo/: navigation_demo
navigation_demo/devel/lib/pkgconfig/: TurtleStorage.pc  mapNavigation.pc  map_navigation.pc  navigation_demo.pc  prueba.pc  simple_navigation_goals.pc  teleop_twist_keyboard.pc  turtle_storage.pc
navigation_demo/devel/lib/simple_navigation_goals/: simple_navigation_goals
navigation_demo/devel/lib/turtle_storage/: simple_navigation_goals  turtle_storage
navigation_demo/devel/share/TurtleStorage/cmake/: TurtleStorageConfig.cmake
navigation_demo/devel/share/mapNavigation/cmake/: mapNavigationConfig.cmake
navigation_demo/devel/share/map_navigation/cmake/: map_navigationConfig.cmake
navigation_demo/devel/share/navigation_demo/cmake/: navigation_demoConfig.cmake
navigation_demo/devel/share/prueba/cmake/: pruebaConfig.cmake
navigation_demo/devel/share/simple_navigation_goals/cmake/: simple_navigation_goalsConfig.cmake
navigation_demo/devel/share/teleop_twist_keyboard/cmake/: teleop_twist_keyboardConfig.cmake
navigation_demo/devel/share/turtle_storage/cmake/: turtle_storageConfig.cmake
navigation_demo/src/navigation_demo/: CMakeLists.txt  package.xml
navigation_demo/src/navigation_demo/src/: navigation_demo.cpp
panning/: CMakeLists.txt  package.xml
perception/: CMakeLists.txt  package.xml
perception/msg/: perception_data.msg
perception/src/: perception.cpp  perception_tester.cpp
perception/tools/: color_thresholding.py
planning/: package.xml
planning/scripts/: planning_node.py  planning_node.py~
planning/src/: planning.cpp
simple_navigation_goals/: CMakeLists.txt  package.xml
tracking/: CMakeLists.txt  package.xml
tracking/scripts/: tracking_node.py  tracking_node.py~  tracking_node_malo.py
tracking/track_turtlebot/: CMakeLists.txt  package.xml
turtlebot/a_multirob/: CMakeLists.txt  package.xml
turtlebot/a_multirob/launch/: create_multi_robot.launch  create_one_robot.launch  one_robot.launch  robot.launch  robots.launch
turtlebot/a_multirob/models/: kobuki_hexagons1_ust10lx_astra.urdf.xacro  race.sdf
turtlebot/a_multirob/src/: perception.cpp
turtlebot/turtlebot_description/robots/: kobuki_hexagons1_astra_ust10lx_reactor_wrist.urdf.xacro  kobuki_hexagons1_ust10lx_astra.urdf.xacro  kobuki_hexagons_astra_.urdf.xacro  kobuki_hexagons_astra_reactor_no_wrist.urdf.xacro  kobuki_hexagons_astra_reactor_wrist.urdf.xacro  kobuki_hexagons_astra_urg04lx.urdf.xacro  kobuki_hexagons_astra_widowx.urdf.xacro  kobuki_hexagons_no3d_notop.urdf.xacro  kobuki_hexagons_no3d_urg04lx.urdf.xacro  kobuki_hexagons_reactor_no_wrist.urdf.xacro  kobuki_hexagons_reactor_wrist.urdf.xacro  kobuki_hexagons_urg04lx_notop.urdf.xacro
turtlebot/turtlebot_description/urdf/: turtlebot_library.urdf.xacro
turtlebot/turtlebot_description/urdf/sensors/: astra.urdf.xacro  hokuyo_urg04lx.urdf.xacro  hokuyo_ust10lx.urdf.xacro
turtlebot/turtlebot_description/urdf/stacks/: hexagons1.urdf.xacro
turtlebot/turtlebot_gazebo/launch/: amcl_demo.launch  play_gmapping.launch  turtlebot_world.launch
turtlebot/turtlebot_gazebo/launch/includes/: kobuki.launch.xml
turtlebot/turtlebot_gazebo/worlds/: cube_world.world  green_cube.world  green_plate.world
