<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>The localization package, using Depth, camera parameters and information about an object, tracks the position and the next position to reach.</description>

  <!-- Maintainers -->
  <maintainer email="saulcovarocamora@gmail.com">COVA ROCAMORA, R. Saul</maintainer>
  <maintainer email="jonathan.mortes.esquer@gmail.com">MORTES ESQUER, Jonathan</maintainer>
  <maintainer email="yoinelnovelotellez@gmail.com">NOVELO TELLEZ, Yoinel</maintainer>
  <maintainer email="josemigueltorrescamara@gmail.com">TORRES CAMARA, Jose Miguel</maintainer>

  <!-- License -->
  <license>GPLv3</license>

  <!-- Author -->
  <author email="saulcovarocamora@gmail.com">Saul Cova Rocamora</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

</package>
